--- a/index.html
+++ b/index.html
@@ -14,7 +14,118 @@
 </head>
 
 <body>
-    <h1>Conf Bs As</h1>
+    <div class="container" style="border: blue dotted;">
+        <div class="row border bg-dark text-white">
+            <div class="col-sm-1 border border-dark">
+                <img class="img-fluid" src="img/codoacodo.png" alt="Codo a Codo">
+            </div>
+            <div class="col-sm-3 border border-dark">Conf Bs As</div>
+            <div class="col border border-secondary">La conferencia</div>
+            <div class="col border border-secondary">Los oradores</div>
+            <div class="col border border-secondary">El lugar y la fecha</div>
+            <div class="col border border-secondary">Conviérte en orador</div>
+            <div class="col border border-secondary">Comprar tickets</div>
+
+        </div>
+    </div>
+    <div class="container" style="border: yellow dotted;">
+        <div class="row">
+            <img class="img-fluid" src="img/ba1.jpg" alt="Castillo">
+        </div>
+    </div>
+
+    <div class="container" style="border: blue dotted;">
+        <div class="row">CONOCÉ A LOS</div>
+        <div class="row">ORADORES</div>
+        <div class="row">
+            <div class="col-sm-4 border border-danger">
+                <div class="card" style="width:300px">
+                    <img class="card-img-top" src="img/steve.jpg" alt="Steve">
+                    <div class="card-body">
+                        <h4 class="card-title">Steve Jobs</h4>
+                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem soluta
+                            mollitia repellat pariatur eaque id autem eveniet sit velit non? Non nulla quaerat, delectus
+                            totam suscipit aspernatur fugiat dolor voluptatem!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 border border-danger">
+                <div class="card" style="width:300px">
+                    <img class="card-img-top" src="img/bill.jpg" alt="Bill">
+                    <div class="card-body">
+                        <h4 class="card-title">Bill Gates</h4>
+                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem soluta
+                            mollitia repellat pariatur eaque id autem eveniet sit velit non? Non nulla quaerat, delectus
+                            totam suscipit aspernatur fugiat dolor voluptatem!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 border border-danger">
+                <div class="card" style="width:300px">
+                    <img class="card-img-top" src="img/ada.jpeg" alt="Ada">
+                    <div class="card-body">
+                        <h4 class="card-title">Ada Lovelace</h4>
+                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem soluta
+                            mollitia repellat pariatur eaque id autem eveniet sit velit non? Non nulla quaerat, delectus
+                            totam suscipit aspernatur fugiat dolor voluptatem!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container" style="border: red dotted;">
+        <div class="row border border-dark">
+            <div class="col-sm-6 border border-danger">
+                <img class="img-fluid" src="img/honolulu.jpg" alt="Honolulu">
+            </div>
+            <div class="col-sm-6 border border-danger">
+                <h2>Bs As - Octubre</h2>
+                <p>Buenos Aires es la provincia y localidad más grande del estado de Argentina en Estados
+                    Unidos. Honolulu
+                    es la más sureña de entre las principales ciudades estadounidenses. Aunque el nombre Honolulu se
+                    refiere
+                    al área urbana en la costa suroeste de la isla Oahu, la ciudad y el condado de Honolulu han
+                    formadouna
+                    ciudad-condado consolidada que cubre toda la ciudad (aproximadamente 600 km2 de superficie).
+                </p>
+                <p>Conocé mas</p>
+            </div>
+        </div>
+    </div>
+    <div class="container" style="border: blue dotted;">
+        <div class="row">CONVIÉRTETE EN UN</div>
+        <div class="row">ORADOR</div>
+        <div class="row">Anótate como orador para dar una charla ignite. Cuéntanos de qué quieres hablar!</div>
+        <form>
+            <div class="row">
+                <div class="col">
+                    <input type="text" class="form-control" placeholder="Nombre" name="Name">
+                </div>
+                <div class="col">
+                    <input type="text" class="form-control" placeholder="Apellido" name="LastName">
+                </div>
+                <div class="row">
+                    <div class="col"><textarea class="form-control" rows="5" id="comment" name="text" placeholder="Sobre qué quieres hablar?"></textarea></div>
+                </div>
+                <div class="row">Recuerda incluir un título para tu charla</div>
+                <button type="submit" class="btn btn-primary">Enviar</button>
+
+            </div>
+        </form>
+    </div>
+    </div>
+    <div class="container" style="border: yellow dotted;">
+        <div class="row border">
+            <div class="col border border-dark">Preguntas Frecuentes</div>
+            <div class="col border border-dark">Contáctenos</div>
+            <div class="col border border-secondary">Prensa</div>
+            <div class="col border border-secondary">Conferencias</div>
+            <div class="col border border-secondary">Términos y condiciones</div>
+            <div class="col border border-secondary">Privacidad</div>
+            <div class="col border border-secondary">Estudiantes</div>
+        </div>
+    </div>
 </body>
 
 </html>
