--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 
     <!--CARDS-->
-    <div class="container-fluid" style="border: blue dotted;">
+    <div class="container" style="border: blue dotted;">
         <div class="row">
             <h6 class="text-center text-black-50 m-0 p-0">CONOCÉ A LOS</h6>
             <h2 class="text-center m-0 p-0">ORADORES</h2>
@@ -130,15 +130,15 @@
         <p class="text-center">Anótate como orador para dar una <abbr title="Charla Ignite">charla ignite</abbr>. Cuéntanos de qué quieres hablar!</p>
         <form>
             <div class="row">
-                <div class="col">
+                <div class="col ms-5">
                     <input type="text" class="form-control" placeholder="Nombre" name="Nombre">
                 </div>
-                <div class="col">
+                <div class="col me-5">
                     <input type="text" class="form-control" placeholder="Apellido" name="Apellido">
                 </div>
             </div>
             <div class="row mt-3">
-                <div class="col">
+                <div class="col mx-5">
                     <textarea class="form-control" name="Coments" id="Comments" rows="10" placeholder="¿Sobre qué quieres hablar?"></textarea>
                     <p class="text-black-50">Recuerda incluir un título para tu charla</p>
                 </div>
