--- a/index.html
+++ b/index.html
@@ -36,13 +36,14 @@
     <div class="container-fluid p-0" style="border: yellow dotted;">
         <div class="row">
             <img class="img-fluid" src="img/ba1.jpg" alt="Castillo">
-            <h2 class="float-end border border-danger">Conf Bs As</h2>
-            <p>Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conocimiento y
+            <h2 class="text-end">Conf Bs As</h2>
+            <p class="text-end">Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conocimiento y
                 experiencia de los expertos que están creando el futuro de internet. Ven a conocer a miembros del
                 evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. ¡Te
                 esperamos!</p>
-            <p><button type="button" class="btn btn-outline-secondary btn-sm">Quiero ser orador</button>
-                <button type="button" class="btn btn-success btn-sm text-white">Comprar Tickets</button></p>
+            <p class="text-end"><button type="button" class="btn btn-outline-secondary btn-sm">Quiero ser orador</button>
+                <button type="button" class="btn btn-sm text-white" style="background-color: #94F353">Comprar
+                    Tickets</button></p>
 
         </div>
     </div>
@@ -53,49 +54,54 @@
             <h6 class="text-center text-black-50 m-0 p-0">CONOCÉ A LOS</h6>
             <h2 class="text-center m-0 p-0">ORADORES</h2>
         </div>
-        <div class="row">
-            <div class="col-sm-4 border border-danger">
-                <div class="card" style="width:300px">
-                    <img class="card-img-top" src="img/steve.jpg" alt="Steve">
-                    <div class="card-body">
-                        <h4 class="card-title">Steve Jobs</h4>
-                        <p class="card-text">
-                            <span class="badge bg-warning text-body me-1">JavaScript</span>
-                            <span class="badge bg-info">React</span>
-                        </p>
-                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem soluta
-                            mollitia repellat pariatur eaque id autem eveniet sit velit non? Non nulla quaerat, delectus
-                            totam suscipit aspernatur fugiat dolor voluptatem!</p>
+        <div class="d-flex justify-content-center">
+            <div class="row">
+                <div class="col-sm-4 border border-danger">
+                    <div class="card" style="width:300px">
+                        <img class="card-img-top" src="img/steve.jpg" alt="Steve">
+                        <div class="card-body">
+                            <h4 class="card-title">Steve Jobs</h4>
+                            <p class="card-text">
+                                <span class="badge bg-warning text-body me-1">JavaScript</span>
+                                <span class="badge bg-info">React</span>
+                            </p>
+                            <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem soluta
+                                mollitia repellat pariatur eaque id autem eveniet sit velit non? Non nulla quaerat,
+                                delectus
+                                totam suscipit aspernatur fugiat dolor voluptatem!</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-sm-4 border border-danger">
-                <div class="card" style="width:300px">
-                    <img class="card-img-top" src="img/bill.jpg" alt="Bill">
-                    <div class="card-body">
-                        <h4 class="card-title">Bill Gates</h4>
-                        <p class="card-text">
-                            <span class="badge bg-warning text-body me-1">JavaScript</span>
-                            <span class="badge bg-info">React</span>
-                        </p>
-                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem soluta
-                            mollitia repellat pariatur eaque id autem eveniet sit velit non? Non nulla quaerat, delectus
-                            totam suscipit aspernatur fugiat dolor voluptatem!</p>
+                <div class="col-sm-4 border border-danger">
+                    <div class="card" style="width:300px">
+                        <img class="card-img-top" src="img/bill.jpg" alt="Bill">
+                        <div class="card-body">
+                            <h4 class="card-title">Bill Gates</h4>
+                            <p class="card-text">
+                                <span class="badge bg-warning text-body me-1">JavaScript</span>
+                                <span class="badge bg-info">React</span>
+                            </p>
+                            <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem soluta
+                                mollitia repellat pariatur eaque id autem eveniet sit velit non? Non nulla quaerat,
+                                delectus
+                                totam suscipit aspernatur fugiat dolor voluptatem!</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-sm-4 border border-danger">
-                <div class="card" style="width:300px">
-                    <img class="card-img-top" src="img/ada.jpeg" alt="Ada">
-                    <div class="card-body">
-                        <h4 class="card-title">Ada Lovelace</h4>
-                        <p class="card-text">
-                            <span class="badge bg-secondary me-1">JavaScript</span>
-                            <span class="badge bg-danger">React</span>
-                        </p>
-                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem soluta
-                            mollitia repellat pariatur eaque id autem eveniet sit velit non? Non nulla quaerat, delectus
-                            totam suscipit aspernatur fugiat dolor voluptatem!</p>
+                <div class="col-sm-4 border border-danger">
+                    <div class="card" style="width:300px">
+                        <img class="card-img-top" src="img/ada.jpeg" alt="Ada">
+                        <div class="card-body">
+                            <h4 class="card-title">Ada Lovelace</h4>
+                            <p class="card-text">
+                                <span class="badge bg-secondary me-1">JavaScript</span>
+                                <span class="badge bg-danger">React</span>
+                            </p>
+                            <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem soluta
+                                mollitia repellat pariatur eaque id autem eveniet sit velit non? Non nulla quaerat,
+                                delectus
+                                totam suscipit aspernatur fugiat dolor voluptatem!</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -127,7 +133,8 @@
     <div class="container" style="border: blue dotted;">
         <h6 class="text-center text-black-50 m-0 p-0">CONVIÉRTETE EN UN</h6>
         <h2 class="text-center m-0 p-0">ORADOR</h2>
-        <p class="text-center">Anótate como orador para dar una <abbr title="Charla Ignite">charla ignite</abbr>. Cuéntanos de qué quieres hablar!</p>
+        <p class="text-center">Anótate como orador para dar una <abbr title="Charla Ignite">charla ignite</abbr>.
+            Cuéntanos de qué quieres hablar!</p>
         <form>
             <div class="row">
                 <div class="col ms-5">
@@ -139,27 +146,28 @@
             </div>
             <div class="row mt-3">
                 <div class="col mx-5">
-                    <textarea class="form-control" name="Coments" id="Comments" rows="10" placeholder="¿Sobre qué quieres hablar?"></textarea>
+                    <textarea class="form-control" name="Coments" id="Comments" rows="10"
+                        placeholder="¿Sobre qué quieres hablar?"></textarea>
                     <p class="text-black-50">Recuerda incluir un título para tu charla</p>
                 </div>
             </div>
-            <dvi class="row">
-                <button type="submit" class="btn btn-primary">Enviar</button>
-            </dvi>
+            <div class="row mx-5">
+                <button type="submit" class="btn text-white" style="background-color: #94F353">Enviar</button>
+            </div>
 
         </form>
     </div>
 
     <!--FOOTER-->
-    <div class="container-fluid px-5 bg-secondary text-white" style="border: yellow dotted;">
-        <div class="row border p-0">
-            <div class="col border border-dark p-0">Preguntas Frecuentes</div>
-            <div class="col border border-dark p-0">Contáctenos</div>
-            <div class="col border border-dark p-0">Prensa</div>
-            <div class="col border border-dark p-0">Conferencias</div>
-            <div class="col border border-dark p-0">Términos y condiciones</div>
-            <div class="col border border-dark p-0">Privacidad</div>
-            <div class="col border border-dark p-0">Estudiantes</div>
+    <div class="container-fluid px-5 text-white mt-3" style="background-color: #112448;border: yellow dotted;">
+        <div class="row p-0 my-4">
+            <div class="col m-0 p-0">Preguntas Frecuentes</div>
+            <div class="col m-0 p-0">Contáctenos</div>
+            <div class="col m-0 p-0">Prensa</div>
+            <div class="col m-0 p-0">Conferencias</div>
+            <div class="col m-0 p-0">Términos y condiciones</div>
+            <div class="col m-0 p-0">Privacidad</div>
+            <div class="col m-0 p-0">Estudiantes</div>
         </div>
     </div>
 
