--- a/index.html
+++ b/index.html
@@ -5,58 +5,80 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Stylesheet-->
+    <link rel="stylesheet" href="CSS/Estilos.css">
     <!-- Latest compiled and minified CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Latest compiled JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Conf Bs As</title>
 </head>
 
 <body>
     <!--ENCABEZADO-->
-    <div class="container-fluid" style="border: blue dotted;">
-        <div class="row border bg-dark text-white p-0">
-            <div class="col-sm-1">
-                <img class="img-fluid" src="img/codoacodo.png" alt="Codo a Codo">
-            </div>
-            <div class="col-sm-3">
-                <h5>Conf Bs As</h5>
-            </div>
-            <div class="col border border-danger p-0 m-0">La conferencia</div>
-            <div class="col text-muted border border-danger p-0 m-0">Los oradores</div>
-            <div class="col text-muted border border-danger p-0 m-0">El lugar y la fecha</div>
-            <div class="col text-muted border border-danger p-0 m-0">Conviérte en orador</div>
-            <div class="col text-success border border-danger p-0 m-0">Comprar tickets</div>
+    <div class="container-fuid"">
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+            <div class="container-fluid">
+                <!--Botón del navbar toggle-->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapsibleNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-        </div>
+                <a class="navbar-brand" href="#">
+                    <img class="img-fluid" src="img/codoacodo.png" width="70" height="70" alt="Codo a Codo">Conf Bs
+                    As</a>
+
+                <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">La Conferencia</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled" href="#">Los Oradores</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled" href="#">El lugar y la fecha</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled" href="#">Conviérte en orador</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-success" href="#">Comprar tickets</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </div>
 
     <!--IMAGEN CASTILLO-->
-    <div class="container-fluid p-0" style="border: yellow dotted;">
-        <div class="row">
+    <div class="container-fluid p-0 Fondo">
             <img class="img-fluid" src="img/ba1.jpg" alt="Castillo">
-            <h2 class="text-end">Conf Bs As</h2>
-            <p class="text-end">Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conocimiento y
-                experiencia de los expertos que están creando el futuro de internet. Ven a conocer a miembros del
-                evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. ¡Te
-                esperamos!</p>
-            <p class="text-end"><button type="button" class="btn btn-outline-secondary btn-sm">Quiero ser orador</button>
-                <button type="button" class="btn btn-sm text-white" style="background-color: #94F353">Comprar
-                    Tickets</button></p>
-
-        </div>
-    </div>
+            <div class="AbajoCentro">
+                <h2 class="text-end text-white">Conf Bs As</h2>
+                <p class="text-end text-white">Bs As llega por primera vez a Argentina. Un evento para
+                    compartir con nuestra comunidad
+                    el conocimiento y
+                    experiencia de los expertos que están creando el futuro de internet. Ven a conocer a miembros del
+                    evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. ¡Te
+                    esperamos!</p>
+                <p class="text-end">
+                    <button type="button" class="btn btn-outline-light btn-sm">Quiero ser Orador</button>
+                    <button type="button" class="btn btn-sm text-white" style="background-color: #94F353">Comprar
+                        Tickets</button>
+                </p>
+            </div>
+     </div>
 
     <!--CARDS-->
-    <div class="container" style="border: blue dotted;">
+    <div class="container mb-3">
         <div class="row">
             <h6 class="text-center text-black-50 m-0 p-0">CONOCÉ A LOS</h6>
             <h2 class="text-center m-0 p-0">ORADORES</h2>
         </div>
         <div class="d-flex justify-content-center">
             <div class="row">
-                <div class="col-sm-4 border border-danger">
+                <div class="col-sm-4">
                     <div class="card" style="width:300px">
                         <img class="card-img-top" src="img/steve.jpg" alt="Steve">
                         <div class="card-body">
@@ -72,7 +94,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 border border-danger">
+                <div class="col-sm-4">
                     <div class="card" style="width:300px">
                         <img class="card-img-top" src="img/bill.jpg" alt="Bill">
                         <div class="card-body">
@@ -88,7 +110,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 border border-danger">
+                <div class="col-sm-4">
                     <div class="card" style="width:300px">
                         <img class="card-img-top" src="img/ada.jpeg" alt="Ada">
                         <div class="card-body">
@@ -109,7 +131,7 @@
     </div>
 
     <!--HAWAII-->
-    <div class="container-fluid" style="border: red dotted;">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-sm-6 border p-0">
                 <img class="img-fluid" src="img/honolulu.jpg" alt="Honolulu">
@@ -130,8 +152,8 @@
     </div>
 
     <!--FORMULARIO-->
-    <div class="container" style="border: blue dotted;">
-        <h6 class="text-center text-black-50 m-0 p-0">CONVIÉRTETE EN UN</h6>
+    <div class="container">
+        <h6 class="text-center text-black-50 m-0 mt-3 p-0">CONVIÉRTETE EN UN</h6>
         <h2 class="text-center m-0 p-0">ORADOR</h2>
         <p class="text-center">Anótate como orador para dar una <abbr title="Charla Ignite">charla ignite</abbr>.
             Cuéntanos de qué quieres hablar!</p>
@@ -152,25 +174,52 @@
                 </div>
             </div>
             <div class="row mx-5">
-                <button type="submit" class="btn text-white" style="background-color: #94F353">Enviar</button>
+                <button type="submit" class="btn text-white mb-3" style="background-color: #94F353">Enviar</button>
             </div>
 
         </form>
     </div>
 
     <!--FOOTER-->
-    <div class="container-fluid px-5 text-white mt-3" style="background-color: #112448;border: yellow dotted;">
-        <div class="row p-0 my-4">
-            <div class="col m-0 p-0">Preguntas Frecuentes</div>
-            <div class="col m-0 p-0">Contáctenos</div>
-            <div class="col m-0 p-0">Prensa</div>
-            <div class="col m-0 p-0">Conferencias</div>
-            <div class="col m-0 p-0">Términos y condiciones</div>
-            <div class="col m-0 p-0">Privacidad</div>
-            <div class="col m-0 p-0">Estudiantes</div>
-        </div>
+    <div class="container-fuid" style="background-color: #112448">
+        <nav class="navbar navbar-expand-sm justify-content-center">
+            <div class="container-fluid">
+                <!--Botón del navbar toggle-->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapsibleNavbarFooter">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-center " id="collapsibleNavbarFooter">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link text-white text-center" href="#">Preguntas <br>Frecuentes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">Contáctenos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">Prensa</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">Conferencias</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white text-center" href="#">Términos y <br>Condiciones</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">Privacidad</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">Estudiantes</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </div>
 
+    <!-- Latest compiled JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
