--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <img class="img-fluid" src="img/codoacodo.png" width="70" height="70" alt="Codo a Codo">Conf Bs
                     As</a>
 
@@ -43,7 +43,7 @@
                             <a class="nav-link disabled" href="#">Conviérte en orador</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-success" href="#">Comprar tickets</a>
+                            <a class="nav-link text-success" href="tickets.html">Comprar tickets</a>
                         </li>
                     </ul>
                 </div>
