--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <!--ENCABEZADO-->
-    <div class="container-fuid"">
+    <div class="container-fuid">
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
             <div class="container-fluid">
                 <!--Botón del navbar toggle-->
