--- a/tickets.html
+++ b/tickets.html
@@ -50,22 +50,22 @@
     </div>
 
     <!--CUADROS-->
-    <div class="container" style="border: dotted red;">
-        <div class="row justify-content-center" style="border: dotted green;">
-            <div class="col-sm-2 border border-primary me-2">
-                <p><strong>Estudiante</strong></p>
+    <div class="container mt-3">
+        <div class="row justify-content-center text-center">
+            <div class="col-sm-2 border border-primary me-2 text-center">
+                <p class="pt-3"><strong>Estudiante</strong></p>
                 <p>Tienen un Descuento</p>
                 <p><strong>80%</strong></p>
                 <p class="small text-black-50">* presentar documentación</p>
             </div>
             <div class="col-sm-2 border border-primary me-2">
-                <p><strong>Trainee</strong></p>
+                <p class="pt-3"><strong>Trainee</strong></p>
                 <p>Tienen un Descuento</p>
                 <p><strong>50%</strong></p>
                 <p class="small text-black-50">* presentar documentación</p>
             </div>
             <div class="col-sm-2 border border-warning">
-                <p><strong>Junior</strong></p>
+                <p class="pt-3"><strong>Junior</strong></p>
                 <p>Tienen un Descuento</p>
                 <p><strong>15%</strong></p>
                 <p class="small text-black-50">* presentar documentación</p>
@@ -74,58 +74,57 @@
     </div>
 
     <!--FORM-->
-    <div class="container" style="border: dotted blue">
+    <div class="container">
         <div class="container">
             <h6 class="text-center text-black-50 m-0 mt-3 p-0">VENTA</h6>
             <h2 class="text-center m-0 p-0">VALOR DEL TICKET $200</h2>
 
-            <form class="my-3 py-3" style="border: dotted red;">
-                <div class="row">
+            <form class="my-3 py-3 mx-5 px-5">
+                <div class="row mx-5 px-5">
                     <div class="col ms-5">
-                        <input type="text" class="form-control" placeholder="Nombre" name="Nombre">
+                        <input type="text" class="form-control" placeholder="Nombre" name="nNombre" id="idNombre">
                     </div>
                     <div class="col me-5">
-                        <input type="text" class="form-control" placeholder="Apellido" name="Apellido">
+                        <input type="text" class="form-control" placeholder="Apellido" name="nApellido" id="idApellido">
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col mx-5 ">
-                        <label for="email">Email:</label>
-                        <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+                <div class="row mx-5 px-5">
+                    <div class="col mt-3 mx-5 ">
+                        <input type="email" class="form-control" id="idEmail" placeholder="Correo" name="nEmail">
                     </div>
                 </div>
-                <div class="row">
+                <div class="row mt-2 mx-5 px-5">
                     <div class="col ms-5">
-                        <label for="Cantidad">Cantidad:</label>
-                        <input type="text" class="form-control" placeholder="Cantidad" name="Cantidad">
+                        <label for="nCantidad">Cantidad:</label>
+                        <input type="text" class="form-control" placeholder="Cantidad" name="nCantidad" id="idCantidad">
                     </div>
                     <div class="col me-5">
-                        <label for="Categoria">Categoria:</label>
+                        <label for="nCategoria">Categoria:</label>
                         <select class="form-select" name="nCategoria" id="idCategoria">
-                            <option>Estudiante</option>
-                            <option>Trainee</option>
-                            <option>Junior</option>
+                            <option id="idEstudiante">Estudiante</option>
+                            <option id="idTrainee">Trainee</option>
+                            <option id="idJunior">Junior</option>
                         </select>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row mx-5 px-5">
                     <div class="col mt-3 mx-5">
                         <div class="input-group">
                             <span class="input-group-text">Total a Pagar $</span>
-                            <input type="text" class="form-control" placeholder="345,67" name="nTotalPagar"
+                            <input type="text" class="form-control" name="nTotalPagar"
                                 id="idTotalPagar" readonly>
                         </div>
                     </div>
                 </div>
-                <div class="row mt-3">
+                <div class="row mt-3 mx-5 px-5">
                     <div class="col-sm-6">
                         <div class="d-grid ms-5">
-                            <input class="btn btn-block text-white" style="background-color: #94F353" type="reset" value="Borrar">
+                            <input class="btn btn-block text-white" style="background-color: #94F353" type="reset" value="Borrar" id="idBorrar">
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="d-grid me-5">
-                            <button type="submit" class="btn btn-block text-white" style="background-color: #94F353">Enviar</button>
+                            <button type="button" class="btn btn-block text-white" style="background-color: #94F353" id="idEnviar">Resumen</button>
                         </div>
                     </div>
 
@@ -174,6 +173,7 @@
     <!--SCRIPTS-->
     <!-- Latest compiled JavaScript x Boostrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="JS/script_1.js"></script>
 </body>
 
 </html>
